fix(Resources): change site collection a href to Link style(Resources): add spacing to list elements for readability and add color change to hyperlink hover state

--- a/src/components/Resources/Resources.css
+++ b/src/components/Resources/Resources.css
@@ -44,6 +44,7 @@
 .resourcesCard li li {
     list-style-type: circle;
     margin-left: 12px;
+    margin-bottom: 3px;
 }
 
 .resourcesCard li {
@@ -54,6 +55,11 @@
 
 .resourcesCard a {
     text-decoration: underline;
+}
+
+.resourcesCard a:hover,
+.resourcesCard Link:hover {
+    color: var(--text-color-darkerer);
 }
 
 .resourcesCardTitle {
